# xroar

./: ChangeLog  Makefile.am  Makefile.in  README  README.SDS  aclocal.m4  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  version.texi  xroar.1.in  xroar.conf.example  xroar.info  xroar.texi
portalib/: Makefile.am  Makefile.in  array.h  c-ctype.c  c-ctype.h  c-strcase.h  c-strcasecmp.c  c-strncasecmp.c  delegate.c  delegate.h  pl-endian.h  pl-regex.h  pl-string.h  sdsalloc.h  sdsx.c  sdsx.h  slist.c  slist.h  strnlen.c  strsep.c  xalloc.h  xmalloc.c
src/: Makefile.am  Makefile.in  ao.c  ao.h  becker.c  becker.h  breakpoint.c  breakpoint.h  cart.c  cart.h  crc16.c  crc16.h  crc32.c  crc32.h  crclist.c  crclist.h  deltados.c  dkbd.c  dkbd.h  dragon.c  dragondos.c  events.c  events.h  filereq_cli.c  fs.c  fs.h  gdb.c  gdb.h  gmc.c  hd6309.c  hd6309.h  hd6309_trace.c  hd6309_trace.h  hexs19.c  hexs19.h  ide.c  ide.h  idecart.c  idecart.h  joystick.c  (+67 more)
src/alsa/: ao_alsa.c
src/gtk2/: common.c  common.h  drivecontrol.c  drivecontrol.h  filereq_gtk2.c  joystick_gtk2.c  keyboard_gtk2.c  keyboard_gtk2_mappings.c  tapecontrol.c  tapecontrol.glade  tapecontrol.h  ui.xml  ui_gtk2.c  ui_gtk2.gresource.c  ui_gtk2.gresource.xml  ui_gtk2.h  vo_gtkgl.c
src/jack/: ao_jack.c
src/linux/: joystick_linux.c
src/macosx/: ao_macosx.c  filereq_cocoa.m  ui_macosx.m
src/mc6847/: font-6847.c  font-6847.h  font-6847t1.c  font-6847t1.h  mc6847.c  mc6847.h
src/null/: ao_null.c  ui_null.c  vo_null.c
src/oss/: ao_oss.c
src/pulseaudio/: ao_pulse.c
src/sdl2/: ao_sdl2.c  common.c  common.h  joystick_sdl2.c  keyboard_sdl2.c  sdl_cocoa_keyboard.c  sdl_windows32_keyboard.c  sdl_windows32_vsc_table.h  sdl_x11.c  sdl_x11_keyboard.c  sdl_x11_keycode_tables.h  ui_sdl2.c  vo_sdl2.c
src/wasm/: exported_functions  wasm.c  wasm.h
src/windows32/: common_windows32.c  common_windows32.h  filereq_windows32.c  guicon.c  ui_windows32.c  xroar.rc
tools/: Makefile.am  Makefile.in  scancodes_windows.h  scancodes_xfree86.h  scandump.c  scandump_windows.c
